--- a/机械设计/滚动轴承设计.md
+++ b/机械设计/滚动轴承设计.md
@@ -54,3 +54,115 @@
 - 推力角接触轴承： $\alpha$ = 45°到90°，主要轴向力，可以小径向力。
 - 轴向接触轴承：$\alpha$ = 90°，只能径向力。
 
+## 轴承的选择
+
+轴承的选择一般从四个方面考虑：承载能力、轴承转速、调心能力、安装拆卸
+
+- 承载能力
+
+  - 载荷大或冲击大时，选滚子轴承；
+  - 载荷小或冲击小时，选球轴承；
+  - 纯径向载荷：深沟球或者圆柱滚子；
+  - 纯轴向：止推轴承；
+  - 既有轴向力又有径向力：圆锥滚子；
+
+- 轴承转速
+  - 高速轻载选球轴承，低速中再选滚子轴承。
+  - 在高速时，宜选用相同内径而外径较小的轴承。
+  - 外径较大的轴承，宜用于低速重载的场合；
+
+- 调心能力
+  - 由于滚子轴承对偏斜最为敏感，所以当有一定轴线偏斜时应避免采用。
+
+- 安装拆卸
+  - 轴承座没有剖分面而必须沿轴尚装拆时，优先选用内、外圈可分离的轴承；
+ 
+## 失效形式
+- 疲劳点蚀
+- 塑性变形
+- 磨损
+### 计算准则
+- 对一般转速（n>10r/min）轴承，疲劳点蚀是主要失效形式，应进行寿命校核计算；
+
+- 对静止或极慢转速（n≤10 r/min）轴承，承载能力取决于所允许的塑性变形，应进行静强度计算;
+
+- 对高速轴承，除进行寿命计算外，还应进行极限转速校核计算。
+### 寿命计算
+基本额定寿命：一批相同的轴承在相同的运转条件下工作，**其中10%的轴承发生点蚀破坏，而90%的
+轴承不发生点蚀破坏前的转数或者工作小时数**。以 $L_10$ 表示，因此对每一个轴承来说，在额定寿命期限内正常工作的概率为90%，提前发生破坏的概率仅为10%。
+
+
+公式
+(单位为h）
+
+
+其中，P为当量(等效)动载荷；
+
+ε为指数，对于球轴承，$\epsilon$=3，对于滚子轴承，$\epsilon = \frac{10}{3}$。
+
+若轴承的预期寿命 $L'_h$，当当量动载荷P，转速n已知，则轴承的基本额定动载荷(查表可以查)为(极限的承受载荷):
+
+公式
+
+对于在较高温度t>120℃，下工作的高温轴承，引入温度系数 $f_t$。
+
+则修正后的计算公式
+
+公式
+
+公式
+
+当量动载荷P的计算公式为：
+
+$$ p = f_p (XF_r + YF_a)$$
+
+其中，XY分别表示径向轴向系数，$f_p$ 为载荷系数
+
+- 根据公式计算出两支撑处的派生轴向力fa1和fa2大小，并绘制其方向。
+
+- 方向的判定如图所示。<br>正装(面对面安装)使轴的支撑点中心靠近，反装(背对背安装)使轴承的支撑点中心距增大。
+
+- 将外加轴向载荷fac和与之同向的派生轴向力之和与另一派生轴向力进行比较，判断轴承的松端和紧端。
+- 由力的平衡条件确定两端轴承的实际轴向载荷Fa1和Fa2;
+  - 松端轴承的实际轴向载荷：等于其自身的派生轴向力。
+  - 紧端轴承的实际轴向载荷：等于除其自身外的派生轴向力以外轴上所有其他轴向力的代数和。
+ 
+## 轴承装置的设计
+轴承装置的设计主要解决安装、配置、紧固、调节、润滑、密封等问题
+
+1. 安装
+
+安装轴承的壳体和轴承座有足够的刚度；另外在一根轴上两个支撑座孔，要保持必要的同心度。
+
+2. 轴承的配置
+  - 双支撑点各单向固定。用于温度不高的短轴。<br>这种轴承配置常用两个反向安装的角接触球轴承或圆锥滚子轴承。
+    - a). 故前者悬臂较长，支承刚性较差。
+    - b). 在受热变形方面，因运转时轴的温度一般高于外壳的温度，产生变形容易卡死；
+    - 此支撑方式也可用在深沟球轴承上。
+  -一支点双向固定，另一端支点游动；用于跨度较大且工作温度较高的轴。 
+
+## 轴承的调节
+- 轴承的游隙和预紧可以靠端盖下的垫片来调整。
+
+- 1. 锥齿轮或蜗杆在装配时，为了便于调整轴向位置，可将确定其轴向位置的轴承装在一个套杯中，套杯则装在外壳孔中，通过增减套杯端面与外壳之间垫片的厚度，调整锥齿轮或蜗杆的轴向位置。
+
+- 2. 两端游动支撑
+<br>由于人字齿轮轴中，为了防止轴向卡死和人字齿两侧受力不均的现象出现。需使小齿轮轴做成游动，故两端游离支撑。
+- 3. 轴承的紧固
+  - 用周用弹性挡圈前入轴的沟槽内，主要用于轴向力不大及转速不高的场合。
+  - 用螺钉固定的轴端挡圈紧固用于高速旋转且承受轴向力较大的场合。
+  - 用圆螺母和止动垫圈固定用于轴承高速旋转承受轴向力较大的情况。
+  - 用紧定衬套止动垫圈和圆螺母紧固，用于光轴、轴向力和转速都不大的，内圈为圆锥孔的轴承。
+ 
+## 润滑及密封
+### 润滑
+润滑的目的：降低摩擦阻力，散热，减少接触应力，吸收振动，防止锈蚀等。
+
+- 脂润滑：在滚动轴承的速度较低时长采用脂润滑滚动轴承的装脂量一般为轴承内部空间的1/3到2/3为宜。
+- 油润滑：在高温高速的条件下常采用油润滑，滚动轴承常用油润滑的方式有油浴润滑、滴油润滑、溅油润滑、喷油润滑等。其中飞溅润滑是一般闭式齿轮传动装置中
+ ### 密封
+密封的目的：防止润滑剂从轴承中流失，防止灰尘，水分，酸气等外界杂质进入轴承。
+
+- 接触式密封：毡圈密封，唇形密封圈密封和密封环密封。
+<br>毡圈密封主要用于脂润滑的场合，唇型密封圈密封唇的方向要朝向密封的部位。
+- 非接触式密封：间隙密封、甩油密封和曲路密封。
