Add table for effective value and mean of signals
Added a table for common signal RMS and mean calculations.

--- a/测试工程/第二章：周期信号与离散频谱.md
+++ b/测试工程/第二章：周期信号与离散频谱.md
@@ -83,3 +83,12 @@ $$  \phi_n = -\phi_{-n} $$
 
 # 三、周期信号的强度表述
 
+# 常用信号的有效值和均值的计算
+
+| 信号类型 | 有效值 $X_{\text{rms}}$ | 均值 $\bar{X}$ |
+| ---- | -------------------- | ------------ |
+| 正弦波  | $A/\sqrt{2}$         | 0            |
+| 对称方波 | $A$                  | 0            |
+| 三角波  | $A/\sqrt{3}$         | 0            |
+| 锯齿波  | $A/\sqrt{3}$         | $A/2$        |
+| 直流   | $A$                  | $A$          |
