--- a/测试工程/绪论部分.md
+++ b/测试工程/绪论部分.md
@@ -17,12 +17,14 @@
 
 # 测试系统及其组成
 
-一般说来，测试系统由传感器、中间变换装置和显示记录装置三部分组成。
+一般说来，测试系统由$传感器$、$中间变换装置$和$显示记录装置$三部分组成。
 
 传感器将被测物理量(如噪声,温度) 检出并转换为电量，
 中间变换装置对接收到的电信号用硬件电路进行分析处理或经A/D变换后用软件进行信号分析，
 显示记录装置则测量结果显示出来，
 提供给观察者或其它自动控制装置。
+
+---
 
 # 测量的基础知识
 
@@ -37,7 +39,7 @@
 - 准确性
 - 法制性
 
-内容包括：
+计量内容包括：
 - 单位的统一
 - 基准和标准的建立
 - 量值传递
@@ -53,3 +55,114 @@
 # 测试方法的分类
 
 ## 直接测量和间接测量
+
+直接测量 -- 用已标定的仪器，直接地测量出某一待测未知量的量值。
+
+间接测量 -- 对与位置待测量y有确切函数关系的其他变量x(或n个变量)进行直接测量，然后再通过函数计算出待测量y。
+
+## 接触式测量和非接触式测量
+
+非接触式测量 -- 避免了对被测对象的影响。
+
+## 静态测量和动态测量
+
+静态测量 -- 对不随时间变化的被测量进行的测量。
+
+动态测量 -- 对随时间变化的被测量进行的测量，需确定被测量的瞬时值，及其随时间变化的规律。
+
+# 误差
+
+误差 = 测得值 - 真值
+
+真值 -- 观测一个量时，该量本身所具有的真实大小。
+
+理论值 -- 从测量角度看，真值是不能确切获知的，是一个理想的概念。
+
+约定真值 -- 对给定的目标而言，它被认为充分接近真值，因而可以代替真值来使用的量值。
+
+误差是针对真值而言的，真值一般都是指约定真值。
+
+# 误差分类
+
+根据表示形式：
+ - 绝对误差
+ - 相对误差
+ - 引用误差
+ - 分贝误差
+根据性质特点：
+ - 系统误差
+ - 随机误差
+ - 粗大误差
+
+## 绝对误差
+
+绝对误差 = 测得值 - 真值
+
+特点：
+- 绝对误差是一个具体有确定的大小、符号及单位的量。
+- 给出了被测量的量纲，其单位与测得值相同。
+
+## 相对误差
+
+绝对误差与被测量真值之比
+
+被测量真值常用约定真值代替，也可以近似用测量值来代替。
+
+特点：
+- 相对误差有大小和符号
+- 无量纲，一般用百分数表示。
+
+相对误差便于比较不同量值、不同单位、不同物理量等的准确度。
+
+## 引用误差
+
+$$ r_m = \frac{\delta x_m}{x_m} 仪器某标称范围内的最大绝对误差/该标称范围上限 $$
+
+引用误差是一种相对误差，而且该相对误差是引用了特定值，即标称范围上限得到的，故该误差又称为引用相对误差、满度误差。
+
+## 根据误差的统计特征分类：
+
+系统误差：对某一参数在相同条件下进行多次重复测量时，以确定的规律影响各次测量值的误差。
+
+随机误差：对某一参数在相同条件下进行多次重复测量，误差的符号及大小变化无规律，呈现随机性的误差。
+
+粗大误差：一种明显超出规定条件下预期误差范围的误差。是由于某种不正常的原因造成的。
+
+# 测量精度和不确定度
+
+测量精度：泛指测量结果的可信程度。
+
+从计量学来看，描述可信程度用以下4个术语：
+- 测量精密度：表示测量结果中随机误差大小的程度，用标准差评定，说明测定值的分散程度（指随机误差）。
+- 正确度：表示测量结果中系统误差大小的程度，算术平均值偏离真值的程度（指系统误差）。
+- 准确度：测量结果与真值之间的一致程度。（系统和随机  误差综合） 
+
+测量不确定度：表示对测量值真值所处量值范围的评定；或者对被测量真值不能肯定的误差范围的一种评定。
+
+测量结果＝被测量的估计值±不确定度
+
+测量不确定度根据评定方法归为两类：
+- A类分量：通过对一系列观测数据的统计分析来评定
+- B类分量：基于经验或其他信息所认定的概率分布来评定
+
+测量不确定度与误差联系：
+- 测量结果的精度评定参数；
+- 所有的不确定度分量都用标准差表征，由随机误差或系统误差引起
+- 误差是不确定度的基础。
+
+区别：
+- 误差以真值或约定真值为中心，不确定度以被测量的估计值为中心
+- 误差一般难以定值，不确定度可以定量评定
+- 误差有三类，界限模糊，难以严格区分；测量不确定度分两类，界限分明，分析方法简单
+
+# 测量结果的表达方式
+
+- 样本平均值
+- 总体标准差
+- 样本标准差
+- 样本平均值的标准偏差的估计值
+
+在n次测量的等精度测量列中，算术平均值的标准差为单次测量标准差的 $\frac{1}{\sqrt{n}}$ ,当n愈大，算术平均值越接近被测量的真值，测量精度也愈高。  
+
+- 测量结果的置信度表达方式
+- 测量结果的不确定度表达方式
